--- a/final_proyect/frontend/src/loginP.css
+++ b/final_proyect/frontend/src/loginP.css
@@ -1,109 +1,59 @@
-* {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 1000;	
-	font-family: Raleway, sans-serif;
-}
-
-body {
-	background: linear-gradient(90deg, #007514, #ffffff, #970000);		
-}
-
-.container {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	min-height: 1000vh;
-}
-
-
-.login {
-	width: 1500px;
-	padding: 30px;
-	padding-top: 156px;
-}
-
-.login__field {
-	padding: 20px 0px;	
-	position: relative;	
-}
-
-.login__icon {
-	position: absolute;
-	top: 30px;
-	color: #7875B5;
-}
-
-.login__input {
+/* Shared style for inputs and button */
+.login-input, .login-button {
+	width: 100%;
+	padding: 12px; /* Adjusted padding */
 	border: none;
 	border-bottom: 2px solid #D1D1D4;
 	background: none;
-	padding: 10px;
-	padding-left: 24px;
+	padding-left: 24px; /* Updated property name to match camelCase */
 	font-weight: 700;
-	width: 75%;
 	transition: .2s;
-}
-
-.login__input:hover {
+	margin: 10px 0; /* Adjusted margin */
 	outline: none;
+  }
+  
+  .login-input:hover {
 	border-bottom-color: #6A679E;
-}
-
-.login__submit {
+  }
+  
+  /* Container for the logo and login box */
+  .login-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	max-width: 400px;
+	background: rgba(255, 255, 255, 0.8);
+	border-radius: 5px;
+	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+	margin-top: 156px;
+	padding: 20px; /* Adjusted padding */
+  }
+  
+  /* Logo style */
+  .logo {
+	width: 100%;
+	background: url("./fund.png") no-repeat center; /* Relative path for the background image */
+	background-size: contain;
+	padding-bottom: 10px; /* Adjusted padding */
+  }
+  
+  /* Login box style */
+  .login-box {
+	text-align: center;
+  }
+  
+  /* Additional styles for the login button */
+  .login-button {
 	background: #fff;
 	font-size: 14px;
-	margin-top: 30px;
 	padding: 16px 20px;
 	border-radius: 26px;
 	border: 1px solid #D4D3E8;
 	text-transform: uppercase;
 	font-weight: 700;
-	display: flex;
-	align-items: center;
-	width: 100%;
 	color: #4C489D;
 	box-shadow: 0px 2px 2px #5C5696;
 	cursor: pointer;
 	transition: .2s;
-}
-
-.login__submit:active,
-.login__submit:focus,
-.login__submit:hover {
-	border-color: #6A679E;
-	outline: none;
-}
-
-.button__icon {
-	font-size: 24px;
-	margin-left: auto;
-	color: #7875B5;
-}
-
-.social-login {	
-	position: absolute;
-	height: 140px;
-	width: 160px;
-	text-align: center;
-	bottom: 0px;
-	right: 0px;
-	color: #fff;
-}
-
-.social-icons {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-}
-
-.social-login__icon {
-	padding: 20px 10px;
-	color: #fff;
-	text-decoration: none;	
-	text-shadow: 0px 0px 8px #7875B5;
-}
-
-.social-login__icon:hover {
-	transform: scale(1.5);	
-}
+  }
+  
