--- a/final_proyect/frontend/src/loginP.css
+++ b/final_proyect/frontend/src/loginP.css
@@ -1,14 +1,13 @@
-/* Shared style for inputs and button */
+/* Style for input boxes */
 .login-input, .login-button {
 	width: 100%;
-	padding: 12px; /* Adjusted padding */
-	border: none;
-	border-bottom: 2px solid #D1D1D4;
-	background: none;
-	padding-left: 24px; /* Updated property name to match camelCase */
-	font-weight: 700;
-	transition: .2s;
-	margin: 10px 0; /* Adjusted margin */
+	padding: 12px;
+	border: 1px solid #000;
+	background: #fff;
+	border-radius: 5px;
+	font-size: 16px;
+	margin: 10px 0;
+	padding-left: 10px;
 	outline: none;
   }
   
@@ -26,15 +25,15 @@
 	border-radius: 5px;
 	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 	margin-top: 156px;
-	padding: 20px; /* Adjusted padding */
+	padding: 40px; /* Increased padding for better spacing */
   }
   
   /* Logo style */
   .logo {
 	width: 100%;
-	background: url("./fund.png") no-repeat center; /* Relative path for the background image */
-	background-size: contain;
-	padding-bottom: 100px; /* Adjusted padding */
+	background: url("./fund.png") no-repeat center;
+	background-size: contain; /* Use 'cover' to fit the image within the container */
+	padding-bottom: 150px; /* Adjusted padding */
   }
   
   /* Login box style */
@@ -48,12 +47,15 @@
 	font-size: 14px;
 	padding: 16px 20px;
 	border-radius: 26px;
-	border: 1px solid #D4D3E8;
+	border: 1px solid #f3f3f7;
 	text-transform: uppercase;
 	font-weight: 700;
-	color: #4C489D;
-	box-shadow: 0px 2px 2px #5C5696;
+	color: #000000;
+	box-shadow: 0px 2px 2px #808381;
 	cursor: pointer;
 	transition: .2s;
   }
+  .background-image{
+	background: url('./whitePM.png');
+  } 
   
