--- a/final_proyect/frontend/src/loginP.css
+++ b/final_proyect/frontend/src/loginP.css
@@ -21,11 +21,12 @@
 	flex-direction: column;
 	align-items: center;
 	max-width: 400px;
-	background: rgba(255, 255, 255, 0.8);
+	height: 100%;
+	background: rgba(220, 217, 235, 0.8);
 	border-radius: 5px;
-	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-	margin-top: 156px;
-	padding: 40px; /* Increased padding for better spacing */
+	box-shadow: 0px 0px 10px rgba(187, 179, 179, 0.2);
+	margin-top: 25px;
+	padding: 45px; 
   }
   
   /* Logo style */
